--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,324 @@
+html {
+  width: 100vw;
+  height: 100vh;
+  overflow-y: hidden;
+}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.main {
+  width: 100vw;
+  height: 100vh;
+  background-color: black;
+  margin: 0rem auto;
+  display: flex;
+}
+
+.icons {
+  width: 33px;
+  height: 33px;
+}
+.logo {
+  width: 2rem;
+  height: 2rem;
+  color: rgba(256, 256, 256, 0.8);
+}
+
+.active-tab {
+  color: rgb(29, 155, 240) !important;
+}
+
+.section {
+  border: 1px solid rgba(256, 256, 256, 0.1);
+  border-top: none;
+  border-bottom: none;
+}
+
+.homenav {
+  display: flex;
+  color: rgba(256, 256, 256, 0.8);
+  justify-content: space-between;
+  cursor: pointer;
+  padding: 11px;
+  border-bottom: 2px solid rgba(256, 256, 256, 0.3);
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background-color: black;
+}
+
+.staricon {
+  width: 20px;
+  height: 26px;
+}
+
+.aside-left {
+  flex: 2;
+  background-color: rosybrown;
+}
+.widget-right {
+  flex: 0.5;
+  overflow-y: auto;
+}
+
+.feed {
+  flex: 0.6;
+  overflow-x: hidden;
+  overflow-y: auto;
+  border-right: 1px solid rgba(256, 256, 256, 0.3);
+  border-left: 1px solid rgba(256, 256, 256, 0.3);
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.feed::-webkit-scrollbar {
+  display: none;
+}
+
+.search-icon {
+  margin-right: 6px;
+  width: 31px;
+  height: 25px;
+  color: rgba(256, 256, 256, 0.5);
+}
+
+.searchbox {
+  width: 292px;
+  outline: none;
+  background-color: black;
+  border: none;
+  color: white;
+  font-size: 17px;
+}
+.search {
+  display: flex;
+  width: 380px;
+  margin: auto;
+  justify-content: space-evenly;
+  border: 2px solid rgb(29, 155, 240);
+  height: 49px;
+  border-radius: 25px;
+  padding: 8px;
+  margin-top: 5px;
+  transition: border 0.1s ease-in;
+  position: sticky;
+  top: 0;
+  z-index: 10;
+  background-color: black;
+}
+
+.widget_container {
+  margin-top: 5px;
+  margin-left: 20px;
+  padding: 20px;
+  background-color: black;
+  border-radius: 20px;
+  text-align: center;
+}
+
+.widget_container h2 {
+  font-size: 18px;
+  font-weight: 800;
+  color: white;
+  margin-bottom: 5px;
+}
+
+.tweet-box {
+  border-bottom: 1px solid rgba(256, 256, 256, 0.3);
+  position: relative;
+}
+.tweet-text {
+  padding: 10px;
+  width: 85%;
+  display: inline-block;
+}
+
+.imgform {
+  margin-left: 4rem;
+  position: absolute;
+  top: 12px;
+  display: flex;
+  justify-content: space-between;
+  width: 75%;
+}
+.imgurl {
+  outline: none;
+  border: none;
+  background-color: black;
+  font-size: 18px;
+  color: white;
+  width: 85%;
+}
+.imgbtn {
+  background-color: rgb(29, 155, 240);
+  color: white;
+  border-radius: 8px;
+  padding: 6px;
+  font-size: 16px;
+  height: 35%;
+}
+.tweet-text-input {
+  margin-left: 4rem;
+  background-color: black;
+  color: white;
+  width: 85%;
+  border: none;
+  outline: none;
+  padding-bottom: 30px;
+  font-size: 21px;
+  height: 100%;
+}
+
+.tweet-text-input:focus {
+  border-bottom: 1px solid rgba(256, 256, 256, 0.5);
+}
+.tweet-text-input::-webkit-scrollbar {
+  display: none;
+}
+
+.tweet-smbtn {
+  width: 23px;
+  height: 23px;
+  color: rgb(29, 155, 240);
+  margin-right: 15px;
+  cursor: pointer;
+}
+.tweet-box-button {
+  display: flex;
+  margin-left: 8rem;
+  padding: 10px;
+  align-items: center;
+  justify-content: space-between;
+}
+.addphoto {
+  display: inline-block;
+}
+
+.tweet-box-tweet {
+  background-color: rgb(29, 155, 240);
+  color: white;
+  font-size: 19px;
+  text-align: center;
+  padding: 4px 0px 4px 0px;
+  border-radius: 25px;
+  width: 90px;
+  height: 40px;
+  margin-bottom: 5px;
+  cursor: pointer;
+}
+
+.add-btn {
+  display: flex;
+}
+
+.post {
+  display: flex;
+  color: rgba(256, 256, 256, 0.8);
+  margin-top: 10px;
+  padding-right: 30px;
+  border-bottom: 2px solid rgba(256, 256, 256, 0.3);
+  padding-bottom: 10px;
+}
+.name {
+  margin-bottom: 4px;
+  display: flex;
+  align-items: center;
+}
+
+.post_avatar {
+  height: 100%;
+  margin-right: 1rem;
+  margin-left: 1rem;
+}
+.avatar {
+  object-fit: cover;
+}
+
+.display_name {
+  font-size: 19px;
+  margin-right: 3px;
+}
+
+.user_name {
+  font-size: 17px;
+}
+
+.post_header_text {
+  font-size: 17px;
+}
+
+.post_header_img {
+  width: 100%;
+  height: 300px;
+  border-radius: 10px;
+  margin-top: 1rem;
+}
+.post_header_btn {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: space-between;
+}
+.verified {
+  color: rgb(29, 155, 240);
+  margin-right: 4px;
+}
+.action_btn {
+  cursor: pointer;
+}
+
+.like:hover {
+  color: red;
+  box-shadow: 1px 1px 15px red;
+}
+
+.tweet-avatar {
+  margin-left: 1rem;
+  display: inline-block !important;
+}
+
+@media screen and (max-width: 1420px) {
+  .feed {
+    flex: 0.8;
+  }
+}
+@media screen and (max-width: 1247px) {
+  .feed {
+    flex: 0.7;
+  }
+  .widget-right {
+    flex: 0.6;
+  }
+}
+
+@media screen and (max-width: 1102px) {
+  .feed {
+    flex: 0.8;
+  }
+  .widget-right {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .feed {
+    flex: 0.9;
+  }
+}
+
+@media screen and (max-width: 420px) {
+  .feed {
+    flex: 1;
+  }
+  .post_header_img {
+    height: 200px;
+  }
 }
