--- a/src/index.css
+++ b/src/index.css
@@ -283,6 +283,7 @@ body {
 .tweet-avatar {
   margin-left: 1rem;
   display: inline-block !important;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 1420px) {
