--- a/src/components/comment.css
+++ b/src/components/comment.css
@@ -17,13 +17,13 @@ body {
 }
 
 .comment {
-  width: 40vw;
-  height: 50vh;
-  position: absolute;
+  width: 100%;
+  height: 100%;
+  position: sticky;
   background-color: black;
   z-index: 1000;
   top: 20px;
-  left: 300px;
+  left: 30px;
   border-radius: 10px;
 }
 
@@ -38,10 +38,10 @@ body {
 }
 
 .comment-box {
-  position: absolute;
   bottom: 10px;
   display: flex;
   width: 100%;
+  height: 115px;
   justify-content: space-evenly;
 }
 .comment-text {
@@ -51,6 +51,7 @@ body {
   background-color: black;
   color: white;
   width: 100%;
+  height: 100%;
   border: none;
   outline: none;
   font-size: 19px;
@@ -62,4 +63,15 @@ body {
   height: 30px;
   cursor: pointer;
   font-size: 19px;
+}
+
+.allcomment {
+  height: 60%;
+}
+.cancel {
+  height: 75px;
+}
+
+textarea {
+  resize: none;
 }
